force-app/main/default/objects/Lead/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>