force-app/main/default/objects/Lead/fields/Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend__c</fullName>
    <label>Actual Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>