force-app/main/default/objects/Lead/fields/Admin_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Admin_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows the admin from being exempted from rules and required</inlineHelpText>
    <label>Admin Exempt</label>
    <type>Checkbox</type>
</CustomField>