force-app/main/default/objects/Lead/fields/Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email__c</fullName>
    <description>If the lead has an additional email address</description>
    <inlineHelpText>If the lead has an additional email address</inlineHelpText>
    <label>Alt Email</label>
    <type>Email</type>
</CustomField>