force-app/main/default/objects/Lead/fields/Client_team__c.field-meta.xml
<CustomField>
    <fullName>Client_team__c</fullName>
    <label>Client team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>