force-app/main/default/objects/Lead/fields/Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Time__c</fullName>
    <description>Conversion Time from when the Lead was created</description>
    <formula>(ConvertedDate - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field subtracts the converted date from the created date</inlineHelpText>
    <label>Conversion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>