force-app/main/default/objects/Lead/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <formula>TRUE</formula>
    <label>Converted?</label>
    <type>Checkbox</type>
</CustomField>