force-app/main/default/objects/Lead/fields/DaScoopComposer__Groove_Convert__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Groove_Convert__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;lead/leadconvert.jsp?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a Groove action button that creates the &quot;Convert&quot; URL</inlineHelpText>
    <label>Convert</label>
    <type>Text</type>
</CustomField>