force-app/main/default/objects/Lead/fields/DaScoopComposer__Normalized_Phone__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Normalized_Phone__c</fullName>
    <description>Contains the last 9 digits of the phone number, without non-numeric characters.</description>
    <inlineHelpText>Managed by Groove.</inlineHelpText>
    <label>Normalized Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>