force-app/main/default/objects/Lead/fields/Date_Moved_to_MQL__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_MQL__c</fullName>
    <label>Date Moved to MQL</label>
    <type>Date</type>
</CustomField>