force-app/main/default/objects/Lead/fields/Date_Moved_to_SAL__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_SAL__c</fullName>
    <label>Date Moved to SAL</label>
    <type>Date</type>
</CustomField>