force-app/main/default/objects/Lead/fields/Days_since_last_touch__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_touch__c</fullName>
    <formula>TODAY() - DATEVALUE( Groove_Last_Touch__c )</formula>
    <label>Days since last touch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>