force-app/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Used to indicate a specific subsidiary/brand the Lead works in (if no separate Account exists for it)</description>
    <inlineHelpText>Used to indicate a specific subsidiary/brand the Lead works in (if no separate Account exists for it)</inlineHelpText>
    <label>Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>