force-app/main/default/objects/Lead/fields/Engagement_History_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_History_Score__c</fullName>
    <label>Engagement History Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>