force-app/main/default/objects/Lead/fields/Engagement_Score_for_Omnibar__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_for_Omnibar__c</fullName>
    <formula>5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>