force-app/main/default/objects/Lead/fields/Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Event_Attended__c</fullName>
    <description>This is a Hubspot-related property. The most recent trade show, conference or regional sales event that this contact attended, if any. This field may also be populated if the contact was part of a list that was imported from an event attendee list.</description>
    <label>Event(s) attended</label>
    <length>30</length>
    <type>Text</type>
</CustomField>