force-app/main/default/objects/Lead/fields/First_Conversion_from_Hubspot__c.field-meta.xml
<CustomField>
    <fullName>First_Conversion_from_Hubspot__c</fullName>
    <label>First Conversion from Hubspot</label>
    <type>TextArea</type>
</CustomField>