force-app/main/default/objects/Lead/fields/First_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Marketing_Campaign__c</fullName>
    <description>This should populate once with the campaign name of the first campaign this person is associated with where the member status of this person in that campaign has been checked off as responded</description>
    <label>First Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>