force-app/main/default/objects/Lead/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <formula>RIGHT(First_Conversion_from_Hubspot__c, LEN(First_Conversion_from_Hubspot__c) - FIND(&quot;:&quot;, First_Conversion_from_Hubspot__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>