force-app/main/default/objects/Lead/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://gumgum.lightning.force.com/lightning/r/Lead/&quot; + Id +&apos;/view&apos;, FirstName &amp; &quot; &quot; &amp; LastName)</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>