force-app/main/default/objects/Lead/fields/GG100_Prospect__c.field-meta.xml
<CustomField>
    <fullName>GG100_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GG100 Prospect</label>
    <type>Checkbox</type>
</CustomField>