force-app/main/default/objects/Lead/fields/GG50_Sports_Prospects__c.field-meta.xml
<CustomField>
    <fullName>GG50_Sports_Prospects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GG50 Sports Prospects</label>
    <type>Checkbox</type>
</CustomField>