force-app/main/default/objects/Lead/fields/Google_Ad_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Ad_Click_ID__c</fullName>
    <label>Google Ad Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>