force-app/main/default/objects/Lead/fields/Groove_Added_to_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Groove_Added_to_Flow_Date__c</fullName>
    <description>Date of the Flow this person was most recently added to</description>
    <label>Added to Flow Date</label>
    <type>Date</type>
</CustomField>