force-app/main/default/objects/Lead/fields/Groove_Flow_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Groove_Flow_Completed_Date__c</fullName>
    <description>Date when this person completed the Flow they were most recently added to</description>
    <label>Flow Completed Date</label>
    <type>Date</type>
</CustomField>