force-app/main/default/objects/Lead/fields/Groove_Last_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Engagement_Type__c</fullName>
    <description>Type of last engagement</description>
    <label>Last Engagement Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>