force-app/main/default/objects/Lead/fields/Groove_Last_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Name__c</fullName>
    <description>Flow name for the Flow this person was most recently added to</description>
    <label>Last Flow Name</label>
    <type>TextArea</type>
</CustomField>