force-app/main/default/objects/Lead/fields/Groove_Last_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Step_Completed__c</fullName>
    <description>Last step completed in the Flow that the person was most recently added to</description>
    <label>Last Step Completed</label>
    <type>DateTime</type>
</CustomField>