force-app/main/default/objects/Lead/fields/Groove_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Touch__c</fullName>
    <description>Date and time when Lead was last contacted</description>
    <inlineHelpText>Date and time when Lead was last contacted</inlineHelpText>
    <label>Last Touch</label>
    <type>DateTime</type>
</CustomField>