force-app/main/default/objects/Lead/fields/Groove_Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Groove_Next_Step_Due_Date__c</fullName>
    <description>Date when next step is due in the Flow they were most recently added to</description>
    <label>Next Step Due Date</label>
    <type>Date</type>
</CustomField>