force-app/main/default/objects/Lead/fields/Groove_Removed_From_Flow_Reason__c.field-meta.xml
<CustomField>
    <fullName>Groove_Removed_From_Flow_Reason__c</fullName>
    <description>Reason why someone was removed from the Flow they were most recently added to</description>
    <label>Removed From Flow Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>