force-app/main/default/objects/Lead/fields/GumTank_Session__c.field-meta.xml
<CustomField>
    <fullName>GumTank_Session__c</fullName>
    <label>GumTank Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thursday 1/5/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 1/19/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 1/26/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 2/2/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 2/9/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 2/16/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 2/23/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 3/2/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 3/9/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 3/16/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 3/23/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
            <value>
                <fullName>Thursday 3/30/17  10:00 AM - 12:00 PM PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>