force-app/main/default/objects/Lead/fields/Hubspot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Stage</valueSetName>
    </valueSet>
</CustomField>