force-app/main/default/objects/Lead/fields/Invite_to_2018_July_4_Candy_Club__c.field-meta.xml
<CustomField>
    <fullName>Invite_to_2018_July_4_Candy_Club__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite to 2018 July 4 Candy Club</label>
    <type>Checkbox</type>
</CustomField>