force-app/main/default/objects/Lead/fields/IP_City__c.field-meta.xml
<CustomField>
    <fullName>IP_City__c</fullName>
    <description>Based on inferred City from Hubspot form submission.</description>
    <label>IP City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>