force-app/main/default/objects/Lead/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <description>The inferred country from Hubspot form submission data.</description>
    <label>IP Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>