force-app/main/default/objects/Lead/fields/Lead_Archive__c.field-meta.xml
<CustomField>
    <fullName>Lead_Archive__c</fullName>
    <description>Allows to log notes for leads archived for RingLead connection</description>
    <inlineHelpText>Allows to log notes for leads archived for RingLead connection</inlineHelpText>
    <label>Lead Archive</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>