force-app/main/default/objects/Lead/fields/Leads_to_watch__c.field-meta.xml
<CustomField>
    <fullName>Leads_to_watch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads to watch</label>
    <type>Checkbox</type>
</CustomField>