force-app/main/default/objects/Lead/fields/Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created per Val T.</description>
    <inlineHelpText>Person has opted in to receive marketing emails and promotions</inlineHelpText>
    <label>Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>