force-app/main/default/objects/Lead/fields/Marketing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segment__c</fullName>
    <label>Marketing Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday Gift</fullName>
                <label>2016 Client Holiday Gifts</label>
            </value>
            <value>
                <fullName>Aircover</fullName>
            </value>
            <value>
                <fullName>Competitors</fullName>
            </value>
            <value>
                <fullName>CVPR Conference 2017</fullName>
            </value>
            <value>
                <fullName>Ophir</fullName>
            </value>
            <value>
                <fullName>Pluck PR - Reporters</fullName>
            </value>
            <value>
                <fullName>The Visionary Subscriber</fullName>
            </value>
            <value>
                <fullName>VIP/Senior Client</fullName>
            </value>
            <value>
                <fullName>2016 Client Holiday Gifts - Programmatic</fullName>
                <isActive>false</isActive>
                <label>2016 Client Holiday Gifts - Programmatic</label>
            </value>
            <value>
                <fullName>Analyst</fullName>
                <isActive>false</isActive>
                <label>Analyst</label>
            </value>
            <value>
                <fullName>Bankers</fullName>
                <isActive>false</isActive>
                <label>Bankers</label>
            </value>
            <value>
                <fullName>Brands</fullName>
                <isActive>false</isActive>
                <label>Brands</label>
            </value>
            <value>
                <fullName>DSPs/Trading Desks</fullName>
                <isActive>false</isActive>
                <label>DSPs/Trading Desks</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>General - Reporter Analyst</fullName>
                <isActive>false</isActive>
                <label>General - Reporter Analyst</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <isActive>false</isActive>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>Ophir - Agency VIPs</fullName>
                <isActive>false</isActive>
                <label>Ophir - Agency VIPs</label>
            </value>
            <value>
                <fullName>Ophir - Analysts</fullName>
                <isActive>false</isActive>
                <label>Ophir - Analysts</label>
            </value>
            <value>
                <fullName>Ophir - Bankers</fullName>
                <isActive>false</isActive>
                <label>Ophir - Bankers</label>
            </value>
            <value>
                <fullName>Ophir - Cannes eMarketer Event</fullName>
                <isActive>false</isActive>
                <label>Ophir - Cannes eMarketer Event</label>
            </value>
            <value>
                <fullName>Ophir - GDS Brands</fullName>
                <isActive>false</isActive>
                <label>Ophir - GDS Brands</label>
            </value>
            <value>
                <fullName>Ophir - General</fullName>
                <isActive>false</isActive>
                <label>Ophir - General</label>
            </value>
            <value>
                <fullName>Ophir - Journalists</fullName>
                <isActive>false</isActive>
                <label>Ophir - Journalists</label>
            </value>
            <value>
                <fullName>Ophir - Strategics</fullName>
                <isActive>false</isActive>
                <label>Ophir - Strategics</label>
            </value>
            <value>
                <fullName>Ophir - VC&apos;s and Angels</fullName>
                <isActive>false</isActive>
                <label>Ophir - VC&apos;s and Angels</label>
            </value>
            <value>
                <fullName>Programmatic</fullName>
                <isActive>false</isActive>
                <label>Programmatic</label>
            </value>
            <value>
                <fullName>Reporter</fullName>
                <isActive>false</isActive>
                <label>Reporter</label>
            </value>
            <value>
                <fullName>Reporters/Analysts</fullName>
                <isActive>false</isActive>
                <label>Reporters/Analysts</label>
            </value>
            <value>
                <fullName>Strategics</fullName>
                <isActive>false</isActive>
                <label>Strategics</label>
            </value>
            <value>
                <fullName>VC&apos;s and Angels</fullName>
                <isActive>false</isActive>
                <label>VC&apos;s and Angels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>