force-app/main/default/objects/Lead/fields/Marketing_Tag__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Sports Marketing to select specific Leads for filtering</description>
    <inlineHelpText>Used by Sports Marketing to select specific Leads for filtering</inlineHelpText>
    <label>Marketing Tag</label>
    <type>Checkbox</type>
</CustomField>