force-app/main/default/objects/Lead/fields/Monthly_US_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Monthly_US_Page_Views__c</fullName>
    <label>Monthly US Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>