force-app/main/default/objects/Lead/fields/Monthly_US_Uniques__c.field-meta.xml
<CustomField>
    <fullName>Monthly_US_Uniques__c</fullName>
    <label>Monthly US Uniques</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5mm+</fullName>
            </value>
            <value>
                <fullName>1-5mm</fullName>
            </value>
            <value>
                <fullName>500-999k</fullName>
            </value>
            <value>
                <fullName>250-499k</fullName>
            </value>
            <value>
                <fullName>100-249k</fullName>
            </value>
            <value>
                <fullName>0-100k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>