force-app/main/default/objects/Lead/fields/Most_Recent_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Marketing_Campaign__c</fullName>
    <description>This should continuously update with the campaign name of the most recently associated campaign where the member status of this person in that campaign has been checked off as responded</description>
    <label>Most Recent Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>