force-app/main/default/objects/Lead/fields/No_Longer_With_Account__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_With_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked when the lead is no longer with the account.</description>
    <inlineHelpText>This checkbox is checked when the lead is no longer with the account.</inlineHelpText>
    <label>No Longer With Account</label>
    <type>Checkbox</type>
</CustomField>