force-app/main/default/objects/Lead/fields/Opt_contact_out_of_all_marketing_email__c.field-meta.xml
<CustomField>
    <fullName>Opt_contact_out_of_all_marketing_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The lead/contact has opted-out of marketing emails and marketing can no longer email them.</inlineHelpText>
    <label>Marketing Opt-Out</label>
    <type>Checkbox</type>
</CustomField>