force-app/main/default/objects/Lead/fields/Orginial_Created_BY__c.field-meta.xml
<CustomField>
    <fullName>Orginial_Created_BY__c</fullName>
    <label>Orginial Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>