force-app/main/default/objects/Lead/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <formula>IF(CONTAINS(Owner:User.UserRole.Name , &quot;Sports&quot;), Owner:User.Id, IF(Owner:Queue.QueueName  = &quot;GG Sports Queue&quot;, Owner:Queue.Id, IF(CONTAINS( Owner:User.Profile.Name , &quot;Lauren Ford&quot;), Owner:User.Id,&quot; &quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>