force-app/main/default/objects/Lead/fields/Owner_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Active</label>
    <type>Checkbox</type>
</CustomField>